# FooEtAlParameterization

./: CONTRIBUTING.md  README.md  pyproject.toml  setup.py
foo_param/foo_param/: __init__.py  cli.py  foo_param.py
foo_param/tests/: test_parameterization.py
